force-app/main/default/objects/Caregiver_Family__c/Caregiver_Family__c.object-meta.xml
<CustomObject>
    <label>Caregiver Family</label>
    <nameField>
        <displayFormat>MID-{00000}</displayFormat>
        <label>Member ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Caregiver Families</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>