force-app/main/default/objects/Caregiver_Family__c/fields/Background_Check_Required__c.field-meta.xml
<CustomField>
    <fullName>Background_Check_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Background Check Required?</label>
    <type>Checkbox</type>
</CustomField>