force-app/main/default/objects/Caregiver_Family__c/fields/Background_Check_Status__c.field-meta.xml
<CustomField>
    <fullName>Background_Check_Status__c</fullName>
    <label>Background Check Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>