force-app/main/default/objects/Caregiver_Family__c/fields/Caregiver__c.field-meta.xml
<CustomField>
    <fullName>Caregiver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Caregiver</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Caregiver Familys</relationshipLabel>
    <relationshipName>Caregiver_Familys</relationshipName>
    <type>Lookup</type>
</CustomField>