force-app/main/default/objects/Caregiver_Family__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Caregiver Families</relationshipLabel>
    <relationshipName>Caregiver_Families</relationshipName>
    <type>Lookup</type>
</CustomField>