force-app/main/default/objects/Caregiver_Family__c/fields/Family__c.field-meta.xml
<CustomField>
    <fullName>Family__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Family Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Caregiver Families</relationshipLabel>
    <relationshipName>Caregiver_Families</relationshipName>
    <type>Lookup</type>
</CustomField>