force-app/main/default/objects/Caregiver_Family__c/fields/Relationship_to_Foster_Children__c.field-meta.xml
<CustomField>
    <fullName>Relationship_to_Foster_Children__c</fullName>
    <label>Relationship to Foster Children</label>
    <length>255</length>
    <type>Text</type>
</CustomField>